# flake8-alfred

./: .gitignore  .travis.yml  LICENSE  Pipfile  README.md  README.rst  bitbucket-pipelines.yml  dev-requirements.txt  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  setup.cfg  setup.py  willie.py
alfred/: __init__.py  symbols.py  visitor.py
examples/: a.py  b.py
flake8_alfred/: __init__.py  symbols.py  visitor.py
tests/: test_visitor.py
willie/: __init__.py
