[metadata]
author = Alexis Pierru
author_email = ap@datatheorem.com

name = alfred
version = 0.0.1

description = Flake8 plugin warning for unsafe functions
long_description = file: README.rst

classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3.6

[options]
packages = find:
include_package_data = True

python_requires = >=3.6
install_requires = flake8

[options.entry_points]
flake8.extension = B1 = alfred:WarnSymbols

[mypy]
disallow_untyped_defs = True
ignore_missing_imports = True
strict_optional = True
