[metadata]
author = Alexis Pierru
author_email = ap@datatheorem.com

name = flake8-alfred
version = 1.0.0

description = Flake8 plugin warning for unsafe functions
long_description = file: README.md

classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3.6

[aliases]
test = pytest

[options]
packages = find:
include_package_data = True

python_requires = >=3.6
install_requires = flake8
setup_requires = pytest-runner
tests_require = pytest

[options.entry_points]
flake8.extension = B1 = alfred:WarnSymbols

[mypy]
disallow_untyped_defs = True
ignore_missing_imports = True
strict_optional = True
