[metadata]
author = Alexis Pierru
author_email = ap@datatheorem.com

name = flake8-alfred
version = 1.1.1

description = Flake8 plugin warning for unsafe functions
long_description = file: README.md

classifiers =
    Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3.6

[options]
packages = flake8_alfred
include_package_data = True

python_requires = >=3.7
install_requires = flake8>=3.5.0,<6.0.0

[options.entry_points]
flake8.extension = B1 = flake8_alfred:WarnSymbols

[flake8]
exclude = .venv

[isort]
force_single_line = True
lexicographical = True
lines_after_imports = 2
src_paths =
    flake8_alfred/
    tests/

[mypy]
disallow_incomplete_defs = True
disallow_untyped_defs = True
ignore_missing_imports = True
warn_redundant_casts = True
warn_return_any = True
warn_unused_configs = True
warn_unused_ignores = True

[tool:pytest]
addopts = "-vv"
